# hpfp-answers

./: README.adoc  README.md
Ciphers/: Ciphers.cabal  project.cabal
Ciphers/source/: Caesar.hs  Main.hs  Vigenere.hs
Ciphers/tests/: Main.hs
chapter-12/: EitherHelpers.hs  MaybeHelpers.hs  OnlyNatural.hs  StringProcessing.hs  Unfolds.hs  ValidateWord.hs  WhatKind.hs
chapter-13/: Palindrome.hs
chapter-13/create-person/: create-person.cabal
chapter-13/create-person/source/: Main.hs
chapter-13/hangman/: LICENSE
chapter-13/hangman/source/: Main.hs
chapter-13/person/: person.cabal
chapter-13/person/source/: Main.hs
chapter-14/: README.adoc
chapter-14/QuickCheck/: QuickCheckTests.hs
chapter-14/QuickCheckTests/: QuickCheckTests.cabal  QuickCheckTests.hs
chapter-14/WordNumberTest/: project.cabal
chapter-14/WordNumberTest/source/: WordNumber.hs
chapter-14/WordNumberTest/tests/: Main.hs
chapter-14/arbitrary-instances/: arbitrary-instances.cabal
chapter-14/gen-implementations/: Main.hs  gen-implementations.cabal
chapter-14/hspec-add/: Main.hs  Properties.hs  project.cabal
chapter-14/hspec-addition/: hspec-addition.cabal
chapter-14/hspec-multiply/: Main.hs  project.cabal
chapter-14/idempotence/: Main.hs  idempotence.cabal
chapter-14/morse/: README.adoc  project.cabal
chapter-14/morse/executable/: Main.hs
chapter-14/morse/source/: Morse.hs
chapter-14/morse/tests/: Main.hs
chapter-15-monoid-semigroup/: First.hs  Madlib.hs  Optional.hs  QuickCheckCatch.hs  QuickChecks.hs
chapter-15-monoid-semigroup/Instances/: Main.hs  Monoids.hs  Semigroups.hs  project.cabal
chapter-15-monoid-semigroup/Semigroup/: Instances.hs  project.cabal
chapter-15-monoid-semigroup/orphan-instances/: Listy.hs  ListyInstances.hs
chapter-16-functor/: EitherOr.hs  HigherOrderType.hs  Instances.hs  InstancesFix.hs  InstancesIs.hs  Intermission.hs  Intuition.hs  Lifting.hs  Optional.hs  QuickChecks.hs  Wrap.hs
chapter-17-applicative/: Constant.hs  Ex1.hs  Ex2.hs  HelloWorld.hs  Identity.hs  SpecializedTypes.hs
chapter-17-applicative/EitherLike/: Main.hs  Sum.hs  Validation.hs  project.cabal
chapter-17-applicative/Instances/: Combinations.hs  Instances.hs  project.cabal
chapter-17-applicative/List/: List.cabal  List.hs  ZipList.hs
chapter-18-monads/: Ex1.hs  Functions.hs  SmartConstructor.hs  TwiceEvents.hs  test.hs
chapter-18-monads/EitherOr/: EitherOr.hs  Instances.hs  project.cabal
chapter-19-structure-applied/shrinkr/: README.md  shrinkr.cabal
chapter-19-structure-applied/shrinkr/app/: Main.hs
chapter-20-foldable/: chapter-exercises.hs  library-functions.hs
chapter-21-traversable/: AxingTediusCode.hs  ChapterExercises.hs  journey-of-a-haskell-expression.md
chapter-22-reader/: Ask.hs  Experiment.hs  ReaderMonad.hs  ReadingComprehension.hs  WarmingUp.hs
chapter-22-reader/Exercises/: Exercises.cabal
chapter-22-reader/Exercises/app/: Main.hs
chapter-23-state/dice/: LICENSE  dice.cabal
chapter-23-state/dice/src/: Lib.hs
ciphers/: Caesar.hs
hangman/: hangman.cabal
hangman/data/: dict.txt
hangman/source/: Hangman.hs  Main.hs
hangman/tests/: Main.hs
