name:                ciphers
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Jason Kuhrt
maintainer:          jasonkuhrt@me.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Caesar, Vigenere
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      source
  default-language:    Haskell2010

executable Ciphers
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      source
  default-language:    Haskell2010

test-suite tests
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends: base, QuickCheck, ciphers
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  default-language: Haskell2010
