name:                hangman
version:             0.1.0.0
synopsis:            A word-guessing game where the user wins by guessing the word loses when a completed stickman is drawn.
license:             ISC
license-file:        LICENSE
author:              Jason Kuhrt
maintainer:          jasonkuhrt@me.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10



library
  exposed-modules:     Hangman
  build-depends:       base >=4.8 && <4.9
                     , random == 1.1
                     , split == 0.2.2
  hs-source-dirs:      source
  default-language:    Haskell2010



executable hangman
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , random == 1.1
                     , split == 0.2.2
  hs-source-dirs:      source
  default-language:    Haskell2010



test-suite tests
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends: base, hspec, hangman
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  default-language: Haskell2010
