name:                SemigroupAndMonoidInstances
version:             0.1.0.0
license-file:        LICENSE
author:              Jason Kuhrt
maintainer:          jasonkuhrt@me.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Main, Monoids, Semigroups
  build-depends: base >=4.8 && <4.9, semigroups, QuickCheck
  hs-source-dirs: .
  default-language: Haskell2010
