name:                Instances
version:             0.1.0.0
license-file:        LICENSE
author:              Jason Kuhrt
maintainer:          jasonkuhrt@me.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Instances
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9, QuickCheck, checkers
  -- hs-source-dirs:
  default-language:    Haskell2010
