name:                shrinkr
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jasonkuhrt/shrinkr#readme
license:             BSD3
-- license-file:        LICENSE
author:              Jason Kuhrt
maintainer:          jasonkuhrt@me.com
copyright:           ISC
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable shrinkr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
  default-language:    Haskell2010
